--- a/debian/rules
+++ b/debian/rules
@@ -22,7 +22,7 @@ export DEB_CFLAGS_MAINT_APPEND
 
 override_dh_auto_install:
 	dh_auto_install -- DESTDIR=${CURDIR}/debian/txn-install PREFIX=/usr \
-		BINGRP=root
+		MANDIR=/usr/share/man/man BINGRP=root
 
 %:
 	dh $@
