--- a/debian/control
+++ b/debian/control
@@ -6,8 +6,8 @@ Build-Depends: debhelper-compat (= 11), libtest-command-perl, libpath-tiny-perl
 Standards-Version: 4.1.5
 Homepage: https://github.com/storpool/txn-install
 Rules-Requires-Root: no
-Vcs-Git: https://github.com/storpool/txn-install.git -b debian
-Vcs-Browser: https://github.com/storpool/txn-install/tree/debian
+Vcs-Git: https://github.com/storpool/txn-install.git -b bionic
+Vcs-Browser: https://github.com/storpool/txn-install/tree/bionic
 
 Package: txn-install
 Architecture: any
